Bug 103480 - EDITING: Hyperlink deleted when merging cells (if not in the first cell)
Summary: EDITING: Hyperlink deleted when merging cells (if not in the first cell)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Czeber László Ádám (NISZ)
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Calc-Merge-Split Hyperlink-Calc
  Show dependency treegraph
 
Reported: 2016-10-25 07:04 UTC by Bernd Brinker
Modified: 2023-08-30 13:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernd Brinker 2016-10-25 07:04:24 UTC
Hello all together,

 a bug description:

1) Insert Hyperlink in D4 as Document
2) Link Cell C4 and D4
--> You would be asked: Move the content in the first cell? 
--> answer: Yes
--> The Hyperlink is deleted.

Mfg. 
Bernd Brinker
Autor in Berlin
Comment 1 m.a.riosv 2016-10-25 23:08:32 UTC
Reproducible
Version: 5.3.0.0.alpha1+
Build ID: f7c61b08d526c79ecd1522dff79386059b6125e0
CPU Threads: 4; OS Version: Windows 6.19; UI Render: GL; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-10-25_00:39:40
Locale: es-ES (es_ES); Calc: CL
Comment 2 QA Administrators 2017-10-26 08:10:02 UTC Comment hidden (obsolete)
Comment 3 Thomas Lendo 2017-11-02 23:56:44 UTC
Still repro with today's master build.

Version: 6.0.0.0.alpha1+
Build ID: 1f8c3e3b78e0abb96d06a51eca354ae7ade5deb2
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: de-DE (de_DE.UTF-8); Calc: group
Comment 4 Timur 2019-05-13 12:17:36 UTC
Repro 6.3+
Comment 5 QA Administrators 2021-05-13 03:58:09 UTC Comment hidden (obsolete)
Comment 6 QA Administrators 2023-05-14 03:19:02 UTC Comment hidden (obsolete)
Comment 7 Commit Notification 2023-08-22 09:56:57 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cb141564733eef078347b89ea657e46e193bd140

tdf#103480 sc: fix lost hyperlink at merging an empty cell with its cell

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 m.a.riosv 2023-08-30 13:24:26 UTC
Verified
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 33ae7c12bbdf19b76ced472ca8aed6cf66477bbe
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded